# ev-open-can-tools

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  platformio.ini  platformio_profile.h  sdkconfig.defaults
include/: app.h  can_helpers.h  handlers.h  plugin_engine.h
include/drivers/: esp32_mcp2515_driver.h  espidf_mcp2515.h
include/platform/: espidf_runtime.h
include/web/: mcp2515_dashboard.h  mcp2515_dashboard_ui.h  mcp2515_dashboard_ui.src.h
legacy-arduino/: platformio.ini
legacy-arduino/include/: README.md
scripts/: minify_dashboard.py  platformio_sync_profile.py
src/: CMakeLists.txt  espidf_runtime.cpp  main.cpp
test/: test_wifi_settings_regression.py
